--- a/Spring JavaFX Example/src/springfx/editor/EditorView.fxml
+++ b/Spring JavaFX Example/src/springfx/editor/EditorView.fxml
@@ -9,7 +9,7 @@
 
 
 <GridPane hgap="5.0" vgap="5.0" alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40" 
-		fx:controller="springfx.editor.EditorPresenter">
+		fx:controller="springfx.editor.EditorController">
 		
    <rowConstraints>
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
