--- a/Spring JavaFX Example/src/springfx/search/Search.fxml
+++ b/Spring JavaFX Example/src/springfx/search/Search.fxml
@@ -6,7 +6,7 @@
 <?import javafx.geometry.Insets?>
 
 <HBox xmlns:fx="http://javafx.com/fxml/1" 
-	fx:controller="springfx.search.SearchPresenter"
+	fx:controller="springfx.search.SearchController"
 	spacing="5" alignment="CENTER">
 	<children>
 		<Label text="Search:" />
