--- a/Spring JavaFX Example/src/springfx/table/TableView.fxml
+++ b/Spring JavaFX Example/src/springfx/table/TableView.fxml
@@ -8,7 +8,7 @@
 
 <StackPane xmlns:fx="http://javafx.com/fxml/1" 
         xmlns="http://javafx.com/javafx/8.0.40" 
-        fx:controller="springfx.table.TablePresenter">
+        fx:controller="springfx.table.TableController">
         
 	<TableView fx:id="table" >
 	  <columns>
